bookinfo_secured/test-server/cluster-a/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test-server
      # annotations:
      #   sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: test-server
        image: zackbutcher/test-server-debug
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 81
        args:
        - --server-port=80
        - --health-port=81
        - --liveness-port=81
        # update to make the health check return unhealthy
        - --healthy=true
        # update to make liveness checks take longer before returning a 200
        - --liveness-delay=0s
        # livenessProbe:
        #   httpGet:
        #     path: /live
        #     port: 81
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 81
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: test-server
  labels:
    app: test-server
    version: v1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
  # - name: http-health
  #   port: 81
  selector:
    app: test-server
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a-remote-test-server
spec:
  gateways:
  - ingress-gateway
  - mesh
  hosts:
  - test-server.svc.a.remote
  http:
  - route:
    - destination:
        host: test-server
